--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "discord": "^0.8.2",
+    "discord.js": "^12.5.3",
+    "mongodb": "^3.6.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
