--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vuetify": "^2.4.0",
-    "express": "^4.17.1",
     "discord": "^0.8.2",
     "discord.js": "^12.5.3",
-    "mongodb": "^3.6.6"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
