--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yrz-site",
+  "name": "YRZ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.6",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vue-vanta": "^0.0.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
